--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="6dp"
-    android:padding="6dp">
+    android:padding="6dp"
+    android:elevation="5dp">
 
     <ImageView
         android:id="@+id/img"
@@ -33,7 +34,7 @@
         android:layout_marginTop="5dp"/>
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="1.5dp"
         android:background="#c0c0c0"
         android:layout_below="@id/detail"
         android:layout_marginTop="3dp"
