--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -1,44 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="6dp"
-    android:padding="6dp"
-    android:elevation="5dp">
+    android:layout_marginStart="5dp"
+    android:layout_marginEnd="5dp"
+    android:padding="6dp">
 
-    <ImageView
-        android:id="@+id/img"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@mipmap/ic_launcher"
-        android:layout_marginEnd="20dp"/>
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="Title"
-        android:textColor="@android:color/black"
-        android:textSize="22sp"
-        android:layout_toEndOf="@id/img"/>
-    <TextView
-        android:id="@+id/detail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="detail"
-        android:layout_below="@id/title"
-        android:layout_toEndOf="@id/img"
-        android:textSize="17sp"
-        android:maxLines = "6"
-        android:minLines="2"
-        android:layout_marginTop="5dp"/>
-    <View
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="1.5dp"
-        android:background="#c0c0c0"
-        android:layout_below="@id/detail"
-        android:layout_marginTop="3dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"/>
+        android:layout_height="wrap_content">
 
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/img"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@mipmap/ic_launcher"
+            android:layout_marginEnd="20dp"/>
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Title"
+            android:textColor="@android:color/black"
+            android:textSize="22sp"
+            android:layout_toEndOf="@id/img"/>
+        <TextView
+            android:id="@+id/detail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="detail"
+            android:layout_below="@id/title"
+            android:layout_toEndOf="@id/img"
+            android:textSize="17sp"
+            android:maxLines = "6"
+            android:minLines="2"
+            android:layout_marginTop="5dp"/>
+
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
